# cpp-crypto-hack-exercises

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
tests/: smoke_test.cpp
